--- a/k8s/redis/deployment.yml
+++ b/k8s/redis/deployment.yml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
         - name: redis
-          image: redis:latest
+          image: redis:alpine
           resources:
             limits:
               cpu: "0.5"
